syntax = "proto3";
message ProtoAdapter_AnchorPanelActionStruct{
    // urlmodel icon = 1;
    string schema = 2;
    int32 action_type = 3;
    

}