syntax = "proto3";
package Anchor;
import "ProtobufAnchorCommonStructV2Adapter.proto";
import "ProtobufAnchorShopLinkStructV2Adapter.proto";
import "ProtobufAnchorWikipediaStructV2Adapter.proto";
message ProtobufAnchorStructV2Adapter{
    int32 show_type = 1;
    int32 business_type = 2;
    WikipediaInfo.ProtobufAnchorWikipediaStructV2Adapter wikipedia_info = 3;
    AnchorShopLinkStruct.ProtobufAnchorShopLinkStructV2Adapter  shop_link = 4;
    AnchorCommonStruct.ProtobufAnchorCommonStructV2Adapter anchor_info = 5;
    string anchor_id = 6;
}