syntax = "proto3";
package ReplyToAwemeStruct;
import "ProtobufUrlStructV2Adapter.proto";
message ProtobufReplyToAwemeStructV2Adapter{
    string aweme_id = 1;
    string desc = 2;
    string author_nickname = 3;
    UrlModel.ProtobufUrlStructV2Adapter  cover = 4; 
    string sec_user_id = 5;
    string alias_comment_id = 6;
    int32 aweme_type = 7;
    bool is_available = 8;
    UrlModel.ProtobufUrlStructV2Adapter author_avatar = 13; 
    int32 type = 14;
}