syntax = "proto3";
package User;
import "ProtoAdapter_DislikeDynamicReasonList.proto";
import "ProtoAdapter_RecommendReasonData.proto";
import "ProtoAdapter_RecommendTemplateStruct.proto";
import "ProtoAdapter_RFansGroupInfo.proto";
import "ProtobufAdCoverTitleV2Adapter.proto";
import "ProtobufAvatarDecorationStructV2Adapter.proto";
import "ProtobufBlueVBrandInfoStructV2Adapter.proto";
import "ProtobufCommerceInfoStructV2Adapter.proto";
import "ProtobufCommercePermissionStructV2Adapter.proto";
import "ProtobufCommerceUserStructV2Adapter.proto";
import "ProtobufEffectArtistStructV2Adapter.proto";
import "ProtobufFollowersDetailV2Adapter.proto";
import "ProtobufHotsearchSprintStructV2Adapter.proto";
import "ProtobufLifeStoryBlockStructV2Adapter.proto";
import "ProtobufLiveHonorStructV2Adapter.proto";
import "ProtobufOriginalMusicianStructV2Adapter.proto";
import "ProtobufPlatformSyncStatusStructV2Adapter.proto";
import "ProtobufRelativeUserStructV2Adapter.proto";
import "ProtobufShareStructV2Adapter.proto";
import "ProtobufUrlStructV2Adapter.proto";
import "ProtoAdapter_ActivityStruct.proto";
import "ProtobufChallengeStructV2Adapter.proto";
import "ProtobufQuickShopStructV2Adapter.proto";
import "ProtobufPermissionStructV2Adapter.proto";
import "ProtobufVideoUnreadStructV2Adapter.proto";
import "ProtoAdapter_UserVirtualCharacterStruct.proto";
import "ProtoAdapter_UserVirtualEmotionStruct.proto";

message ProtobufUserStructV2Adapter {
	string uid = 1;
	string short_id = 2;
	string nickname = 3;
	int32 gender = 4;
	string signature = 5;
	UrlModel.ProtobufUrlStructV2Adapter  avatar_larger = 6;
	UrlModel.ProtobufUrlStructV2Adapter   avatar_thumb = 7;
	UrlModel.ProtobufUrlStructV2Adapter  avatar_medium = 8;
	string birthday = 9;
	bool is_verified = 10;
	int32 allow_status = 11;
	int32 follow_status = 12;
	int32 aweme_count = 13;
	int32 following_count = 14;
	int32 follower_count = 15;
	int32 favoriting_count = 16;
	int64 total_favorited = 17;
	bool is_block = 18;
	string third_name = 19;
	bool hide_search = 20;
	int32 constellation = 21;
	string location = 22;
	bool hide_location = 23;
	string weibo_verify = 24;
	string custom_verify = 25;
	string unique_id = 26;
	string bind_phone = 27;
	int32 special_lock = 28;
	int32 need_recommend = 29;
	bool is_binded_weibo = 30;
	string weibo_name = 31;
	string weibo_schema = 32;
	string weibo_url = 33;
	bool story_open = 34;
	int32 story_count = 35;
	string recommend_reason = 36;
	bool has_facebook_token = 37;
	bool has_twitter_token = 38;
	int64 fb_expire_time = 39;
	int64 tw_expire_time = 40;
	bool has_youtube_token = 41;
	int64 youtube_expire_time = 42;
	int64 room_id = 43;
	int32 live_verify = 44;
	int64 authority_status = 45;
	string verify_info = 46;
	int32 shield_follow_notice = 47;
	int32 shield_digg_notice = 48;
	int32 shield_comment_notice = 49;
	string school_name = 50;
	string school_poi_id = 51;
	int32 school_type = 52;
	ShareInfo.ProtobufShareStructV2Adapter share_info = 53;
	bool with_commerce_entry = 54;
	int32 verification_type = 55;
	OriginalMusician.ProtobufOriginalMusicianStructV2Adapter original_musician = 56;
	ActivityStruct.ProtoAdapter_ActivityStruct activity = 57;
	string enterprise_verify_reason = 58;
	bool is_ad_fake = 59;
	bool star_use_new_download = 60;
	int32 mplatform_followers_count = 61;
	repeated FollowerDetail.ProtobufFollowersDetailV2Adapter followers_detail = 62;
	bool has_activity_medal = 63;
	string region = 64;
	string account_region = 65;
	int32 sync_to_toutiao = 66;
	int32 commerce_user_level = 67;
	CommerceInfo.ProtobufCommerceInfoStructV2Adapter commerce_info = 68;
	int32 live_agreement = 69;
	repeated PlatformInfo.ProtobufPlatformSyncStatusStructV2Adapter  platform_sync_info = 70;
	bool with_shop_entry = 71;
	bool is_discipline_member = 72;
	int32 secret = 73;
	bool has_orders = 74;
	bool prevent_download = 75;
	bool show_image_bubble = 76;
	repeated string geofencing = 77;
	int64 unique_id_modify_time = 78;
	UrlModel.ProtobufUrlStructV2Adapter  video_icon = 79;
	string ins_id = 80;
	string google_account = 81;
	string youtube_channel_id = 82;
	string youtube_channel_title = 83;
	int32 apple_account = 84;
	bool with_dou_entry = 85;
	bool with_fusion_shop_entry = 86;
	bool is_phone_binded = 87;
	int32 login_platform = 88;
	bool accept_private_policy = 89;
	int32 realname_verify_status = 90;
	string twitter_id = 91;
	string twitter_name = 92;
	bool user_canceled = 93;
	bool has_email = 94;
	bool is_gov_media_vip = 95;
	int32 dongtai_count = 96;
	int32 live_agreement_time = 97;
	int64 register_time = 98;
	int32 status = 99;
	bool with_douplus_entry = 100;
	int64 create_time = 101;
	string avatar_uri = 102;
	int32 follower_status = 103;
	int32 neiguang_shield = 104;
	int32 comment_setting = 105;
	int32 duet_setting = 106;
	int64 reflow_page_gid = 107;
	int64 reflow_page_uid = 108;
	int32 user_rate = 109;
	bool with_new_goods = 110;
	bool is_flowcard_member = 111;
	UrlModel.ProtobufUrlStructV2Adapter  room_cover = 112;
	int32 download_setting = 113;
	int64 download_prompt_ts = 114;
	int32 react_setting = 115;
	bool live_commerce = 116;
	string college_name = 117;
	string enroll_year = 118;
	string country = 119;
	string province = 120;
	string city = 121;
	repeated UrlModel.ProtobufUrlStructV2Adapter cover_url = 122;
	string recommend_reason_relation = 123;
	string iso_country_code = 124;
	int32 show_gender_strategy = 125;
	string district = 126;
	string language = 127;
	string room_type_tag = 128;
	int32 dou_plus_share_location = 129;
	bool has_insights = 130;
	string remark_name = 131;
	string video_icon_virtual_URI = 132;
	string share_qrcode_uri = 133;
	int32 profile_tab_type = 134;
	AvatarDecoration.ProtobufAvatarDecorationStructV2Adapter avatar_decoration = 135;
	bool watch_status = 136;
	bool with_commerce_newbie_task = 137;
	bool with_item_commerce_entry = 138;
	int32 star_billboard_rank = 139;
	int32 education = 140;
	bool can_modify_school_info = 141;
	int32 school_visible = 142;
	UrlModel.ProtobufUrlStructV2Adapter  avatar_pendant_larger = 143;
	UrlModel.ProtobufUrlStructV2Adapter  avatar_pendant_thumb = 144;
	UrlModel.ProtobufUrlStructV2Adapter  avatar_pendant_medium = 145;
	repeated RecommendAwemeItem.ProtobufRecommendItemStructV2Adapter item_list = 146;
	int32 user_mode = 147;
	int32 user_period = 148;
	bool is_effect_artist = 149;
	EffectArtistDetail.ProtobufEffectArtistStructV2Adapter effect_detail = 150;
	CommercePermissionStruct.ProtobufCommercePermissionStructV2Adapter commerce_permissions = 151;
	StoryBlockInfo.ProtobufLifeStoryBlockStructV2Adapter  life_story_block = 152;
	int32 hide_following_follower_list = 153;
	bool has_unread_story = 154;
	repeated UrlModel.ProtobufUrlStructV2Adapter  new_story_cover = 155;
	int32 user_story_count = 156;
	bool has_story = 157;
	bool is_star = 158;
	DouplusToastStruct.ProtoAdapter_DislikeDynamicReasonList douplus_toast = 159;
	string cv_level = 160;
	int32 creator_level = 161;
	bool is_mirror = 162;
	int32 pr_exempt = 163;
	repeated int64 type_label = 164;
	int64 avatar_decoration_id = 165;
	bool with_luban_entry = 166;
	repeated UrlModel.ProtobufUrlStructV2Adapter ad_cover_url = 167;
	AdCoverTitle.ProtobufAdCoverTitleV2Adapter ad_cover_title = 168;
	string ad_order_id = 169;
	RFansGroupInfo.ProtoAdapter_RFansGroupInfo  r_fans_group_info = 170;
	bool with_commerce_enterprise_tab_entry = 171;
	HonorStruct.ProtobufLiveHonorStructV2Adapter honor_info = 172;
	int32 comment_filter_status = 173;
	int32 notify_private_account = 174;
	UrlModel.ProtobufUrlStructV2Adapter avatar_168x168 = 175;
	UrlModel.ProtobufUrlStructV2Adapter avatar_300x300 = 176;
	bool is_blocked = 177;
	bool force_private_account = 178;
	bool with_star_atlas_entry = 179;
	HotSearchSprintStruct.ProtobufHotsearchSprintStructV2Adapter sprint_support_user_info = 180;
	string signature_language = 181;
	BlueVBrandInfo.ProtobufBlueVBrandInfoStructV2Adapter brand_info = 182;
	bool display_wvalantine_activity_entry = 183;
	string shop_micro_app = 184;
	CommerceUserInfo.ProtobufCommerceUserStructV2Adapter commerce_user_info = 185;
	repeated RelationLabelUser.ProtobufRelativeUserStructV2Adapter relative_users = 186;
	QuickShopInfo.ProtobufQuickShopStructV2Adapter quick_shop_info = 187;
	string relation_label = 188;
	repeated Challenge.ProtobufChallengeStructV2Adapter  cha_list = 189;
	bool is_minor = 190;
	string sec_uid = 191;
	double recommend_score = 192;
	int32 wx_tag = 193;
	int64 open_insight_time = 194;
	GeneralPermission.ProtobufPermissionStructV2Adapter general_permission = 195;
	int32 birthday_hide_level = 196;
	string bio_url = 197;
	string bio_email = 198;
	int64 latest_order_time = 199;
	bool is_pro_account = 200;
	bool with_stick_entry = 201;
	string email = 202;
	bool is_email_verified = 203;
	string bio_secure_url = 204;
	int32 collect_count = 205;
	bool nickname_update_reminder = 206;
	bool avatar_update_reminder = 207;
	bool is_activity_user = 208;
	string room_data = 209;
	UnReadVideoInfo.ProtobufVideoUnreadStructV2Adapter video_unread_info = 210;
	bool is_life_style = 211;
	int32 stitch_setting = 212;
	bool is_mix_user = 213;
	bool show_favorite_list_on_item = 214;
	int32 signature_display_lines = 215;
	int64 live_status = 216;
	bool is_series_user = 217;
	RecommendTemplateStruct.ProtoAdapter_RecommendTemplateStruct recommend_template = 218;
	int32 new_friend_type = 219;
	repeated int32 common_interest = 221;
	string mkey = 222;
	int32 online_status = 223;
	int64 last_active_time = 224;
	int64 total_favorited_new = 225;
	RecommendReasonData.ProtoAdapter_RecommendReasonData recommend_reason_data = 226;
	UserVirtualCharacterStruct.ProtoAdapter_UserVirtualCharacterStruct user_virtual_character = 227;
	UserVirtualEmotionStruct.ProtoAdapter_UserVirtualEmotionStruct user_virtual_emotion = 228;
}